# opencomputer

./: .gitignore  AGENTS.md  go.mod
.agents/design/: per-sandbox-usage-api.md
.agents/done/: api-edge-websocket-query-auth.md  per-sandbox-usage-api-impl.md
.agents/work/: api-edge-websocket-query-auth.md
.github/workflows/: build-worker-ami.yml  deploy-api-edge.yml  pr-integration.yml  pr-strip-approval.yml
ci/persistent/: up.sh
ci/pr/: down.sh
cloudflare-workers/: schema.sql  schema_phase5_preview_auth.sql
cloudflare-workers/api-edge/: assets  wrangler.prod.toml  wrangler.toml
cloudflare-workers/billing-rollup/: package.json  tsconfig.json  wrangler.prod.toml  wrangler.toml
cmd/backfill/: forward.go  main.go
cmd/ensure-products/: main.go
cmd/seed-dev-secrets/: main.go
cmd/server/: main.go
cmd/worker/: golden_upload.go  main.go
deploy/: worker.env.example
deploy/dev/: seed_dev.sql
deploy/gcp/: .qemu-dev-state-us-east4-c  deploy-qemu-dev.sh
deploy/packer/: worker-ami.pkr.hcl
deploy/vector/: control-plane.yaml  dev-host.yaml  install.sh  populate-vector-env-wait.service  populate-vector-env-wait.sh  populate-vector-env.service  populate-vector-env.sh  worker.yaml
docs/: blobstore-tigris-cutover.md  docs.json
docs/agents/: overview.mdx
docs/agents-api/: overview.mdx
docs/cli/: preview.mdx
docs/reference/: typescript-sdk.mdx
internal/api/: usage.go  (+14 more)
scripts/: rclone-azure-to-tigris.sh  seed_dev_xcell.sh
sdks/python/: pyproject.toml
sdks/python/opencomputer/: __init__.py  mounts.py  sandbox.py  usage.py
web/: vite.config.ts
(+122 files in other folders)
